# KarePlakaModel

./: CMakeLists.txt  README.MD  mainwindow.cpp  mainwindow.h  mainwindow.ui  platefinder.cpp  platefinder.h  plateresult.h
cmake/: onnxruntimeConfig.cmake  onnxruntimeVersion.cmake
